--- a/documentacio/informe/main.tex
+++ b/documentacio/informe/main.tex
@@ -1,4 +1,4 @@
-\documentclass[12pt,a4paper]{article}
+\documentclass[12pt, a4paper]{article}
 
 % Paquets essencials
 \usepackage[utf8]{inputenc}
@@ -46,7 +46,7 @@
     numberstyle=\tiny\color{gray},
     stepnumber=1,
     numbersep=8pt,
-    backgroundcolor=\color{gray!10},
+    backgroundcolor=\color{white},
     showspaces=false,
     showstringspaces=false,
     showtabs=false,
@@ -87,8 +87,8 @@
 \normalsize Universitat Politècnica de Catalunya \\[1cm]
 %
 \begin{tabular}{cc}
-{\textsc{Anel ?}} & {\textsc{Aleix Pitarch}} \\
-\normalsize \texttt{anel.?@estudiantat.upc.edu} & \normalsize \texttt{aleix.pitarch@estudiantat.upc.edu} \\[4mm]
+{\textsc{Anel Ademovic Suljic}} & {\textsc{Aleix Pitarch}} \\
+\normalsize \texttt{anel.suljic@estudiantat.upc.edu} & \normalsize \texttt{aleix.pitarch@estudiantat.upc.edu} \\[4mm]
 {\textsc{Joan Solina}} \\
 \normalsize \texttt{joan.solina@estudiantat.upc.edu}\\
 \end{tabular}
@@ -114,7 +114,7 @@
 \input{chapters/01-introduction}
 \input{chapters/02-problem-definition}
 \input{chapters/03-state-representation}
-%\input{chapters/04-operators}
+\input{chapters/04-operators}
 \input{chapters/05-initial-solution}
 \input{chapters/06-heuristic-function}
 \input{chapters/07-experiments}
