--- a/documentacio/informe/main.tex
+++ b/documentacio/informe/main.tex
@@ -82,7 +82,7 @@
 
 \author{
 \large
-\textsc{Grau A -- Q1 Curs 2025-2026}\\[2mm] 
+\textsc{Grau IA -- Q1 Curs 2025-2026}\\[2mm] 
 \normalsize Departament de Ciències de la Computació \\
 \normalsize Universitat Politècnica de Catalunya \\[1cm]
 %
@@ -111,14 +111,14 @@
 \newpage
 
 % Capítols principals
-\input{chapters/01-introduction}
-\input{chapters/02-problem-definition}
-\input{chapters/03-state-representation}
+%\input{chapters/01-introduction}
+%\input{chapters/02-problem-definition}
+%\input{chapters/03-state-representation}
 \input{chapters/04-operators}
-\input{chapters/05-initial-solution}
-\input{chapters/06-heuristic-function}
-\input{chapters/07-experiments}
-\input{chapters/08-conclusions}
+%\input{chapters/05-initial-solution}
+%\input{chapters/06-heuristic-function}
+%\input{chapters/07-experiments}
+%\input{chapters/08-conclusions}
 
 % Bibliografia (opcional)
 %\bibliographystyle{plain}
