--- a/documentacio/informe/main.tex
+++ b/documentacio/informe/main.tex
@@ -19,6 +19,57 @@
 \usepackage{algpseudocode}
 \usepackage{float}
 
+% Dibuix i gràfics
+\usepackage{tikz}          % Gràfics vectorials en general
+\usepackage{pgfplots}      % Gràfics d'eixos, boxplots, scatter, etc.
+
+% Configuració recomanada per a pgfplots
+\pgfplotsset{compat=1.18}  % Usa la versió més recent disponible
+\usepgfplotslibrary{statistics}  % Necessari per als boxplots
+\usepgfplotslibrary{colorbrewer} % (opcional) paletes de colors millors
+\usepgfplotslibrary{fillbetween} % (opcional) per zones ombrejades
+
+% Altres paquets útils per al teu informe
+\usepackage{float}         % Permet usar [H] per fixar figures
+\usepackage{caption}       % Control de llegendes
+\usepackage{subcaption}    % Figures múltiples en una sola (si ho necessites)
+\usepackage{xcolor}        % Colors millorats
+
+
+% Colors i estil general dels gràfics
+\pgfplotsset{
+    every axis/.append style={
+        tick style={semithick},
+        axis line style={semithick},
+        label style={font=\small},
+        tick label style={font=\small},
+    },
+    boxplot/every box/.style={
+        draw=black,
+        fill=white,
+        line width=0.7pt,
+        solid
+    },
+    boxplot/every whisker/.style={
+        solid,               % línies contínues
+        semithick,
+        draw=black
+    },
+    boxplot/every median/.style={
+        very thick,
+        black,               % color de la mediana
+        solid                % evita patrons discontinus
+    },
+    boxplot/every outlier/.style={
+        mark=o,
+        mark size=1pt,
+        draw=black
+    }
+}
+
+
+
+
 % Configuració de la geometria
 \geometry{
     left=2.5cm,
@@ -82,15 +133,15 @@
 
 \author{
 \large
-\textsc{Grau IA -- Q1 Curs 2025-2026}\\[2mm] 
+\textsc{Grau A -- Q1 Curs 2025-2026}\\[2mm] 
 \normalsize Departament de Ciències de la Computació \\
 \normalsize Universitat Politècnica de Catalunya \\[1cm]
 %
 \begin{tabular}{cc}
 {\textsc{Anel Ademovic Suljic}} & {\textsc{Aleix Pitarch}} \\
 \normalsize \texttt{anel.suljic@estudiantat.upc.edu} & \normalsize \texttt{aleix.pitarch@estudiantat.upc.edu} \\[4mm]
-{\textsc{Joan Solina}} \\
-\normalsize \texttt{joan.solina@estudiantat.upc.edu}\\
+\multicolumn{2}{c}{\textsc{Joan Solina}} \\
+\multicolumn{2}{c}{\normalsize \texttt{joan.solina@estudiantat.upc.edu}}\\
 \end{tabular}
 }
 
@@ -111,14 +162,14 @@
 \newpage
 
 % Capítols principals
-%\input{chapters/01-introduction}
-%\input{chapters/02-problem-definition}
-%\input{chapters/03-state-representation}
+\input{chapters/01-introduction}
+\input{chapters/02-problem-definition}
+\input{chapters/03-state-representation}
 \input{chapters/04-operators}
-%\input{chapters/05-initial-solution}
-%\input{chapters/06-heuristic-function}
-%\input{chapters/07-experiments}
-%\input{chapters/08-conclusions}
+\input{chapters/05-initial-solution}
+\input{chapters/06-heuristic-function}
+\input{chapters/07-experiments}
+\input{chapters/08-conclusions}
 
 % Bibliografia (opcional)
 %\bibliographystyle{plain}
